# kbang

./: CardSet_Architecture.md  ProjectHome.md  Protocol_Events.md  Refactoring.md  Roadmap.md  Screenshots.md  UserManual.md  kbang.pro  kbang_client.pro  kbang_common.pro
branches/kbang-0.2/: CMakeLists.txt  Doxyfile
branches/kbang-0.2/src/client/: CMakeLists.txt  game.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverconnection.cpp  textformatter.h
branches/kbang-0.2/src/client/cards/: card.h  cardbank.cpp  cardsetinfo.cpp  cardsetinfo.h  cardsetmanager.cpp  cardsetmanager.h
branches/kbang-0.2/src/client/dialogs/: aboutdialog.h  connecttoserverdialog.cpp  creategamedialog.cpp  joingamedialog.cpp  joingamedialog.ui  newserverdialog.cpp
branches/kbang-0.2/src/client/events/: cardmovementcmd.cpp  cardmovementcmd.h  gamecontextchangeevent.h  gameevent.cpp  gameevent.h  gameeventplayer.cpp
branches/kbang-0.2/src/client/managers/: cardwidgetsizemanager.h
branches/kbang-0.2/src/client/options/: __main.cpp  opt_cardsets.h  optionsdialog.h  optionstab.h
branches/kbang-0.2/src/client/widgets/: cardlistwidget.h  cardpilewidget.h  cardpocket.cpp  cardwidget.cpp  cardzoomwidget.cpp  deckwidget.h  graveyardwidget.cpp  localplayerwidget.h  opponentwidget.h  playerwidget.h  selectavatarwidget.cpp  selectavatarwidget.h
branches/kbang-0.2/src/cog/: actiondefs.py
branches/kbang-0.2/src/common/: CMakeLists.txt  common.h  config.cpp  config.h  gameevents.cpp  gameevents.h  gamestructs.h  gametypes.h  queries.cpp  queries.h  util.h
branches/kbang-0.2/src/common/debug/: debugblock.h
branches/kbang-0.2/src/common/parser/: actionparser.cpp  actionparser.h  gameeventparser.cpp  gamestructparser.cpp  gamestructparser.h  parser.cpp  querygetparser.cpp  querygetparser.h  servereventparser.cpp  servereventparser.h
branches/kbang-0.2/src/common/tar/: tar.cpp
branches/kbang-0.2/src/server/: characterbase.h  game.cpp  gamecycle.h  gameexceptions.h  gameinfo.cpp  publicgameview.h  publicplayerview.h  reactioncard.h  reactionhandler.h  voidai.h
branches/kbang-0.2/src/server/cards/original/: weaponcard.h
branches/macjariel/: Doxyfile  client.pro  kbang.kdevelop  kbang.pro  kbang_client.pro  kbang_common.pro  kbang_server.pro  server.pro
branches/new-cards-branch/: Doxyfile  kbang_client.pro  kbang_common.pro  kbang_server.pro
client/: card.h  cardwidget.h  client.pro  gameevent.h  gameeventhandler.cpp  gameeventqueue.cpp  joingamedialog.ui  localplayerwidget.ui  logwidget.h  mainwindow.ui  playerwidget.cpp
common/parser/: queryresult.cpp  xmlnode.cpp
server/: cardbang.h  cardbarrel.cpp  cardbeer.h  cardduel.cpp  carddynamite.h  cardmultishoot.cpp  cardmultishoot.h  console.cpp  gamecycle.cpp  kbang.conf  player.cpp  reactionhandler.h
src/client/: CMakeLists.txt  aboutdialog.cpp  card.cpp  card.h  cardbank.cpp  cardbank.h  cardlist.cpp  cardlist.h  cardlistwidget.cpp  cardlistwidget.h  cardmovementevent.cpp  cardmovementevent.h  cardpilewidget.cpp  cardpilewidget.h  cardpocket.h  cardsetinfo.cpp  cardsetinfo.h  cardsetmanager.cpp  cardsetmanager.h  cardwidget.cpp  cardwidget.h  cardwidgetfactory.h  cardwidgetsizemanager.cpp  cardzoomwidget.cpp  characterwidget.cpp  chatwidget.cpp  chatwidget.h  clienttypes.h  common.cpp  common.h  creategamedialog.cpp  creategamedialog.h  creategamedialog.ui  deckwidget.cpp  deckwidget.h  game.cpp  game.h  gameactionmanager.cpp  gamecontextchangeevent.cpp  gameevent.cpp  (+33 more)
src/cog/: gamestructdefs.py  kbangcommon.py
src/common/: CMakeLists.txt  actions.h  common.h  config.h  gameactions.h  gameevents.h  gamestructs.cpp  gamestructs.h  gametypes.cpp  gametypes.h  serverevents.h  util.h
src/server/: characterlist.h  client.cpp  client.h  consolecommand.cpp  game.cpp  game.h  gameeventlistener.h  gameeventmanager.h  gamelogger.cpp  gamelogger.h  gameserver.cpp  gameserver.h  gametable.h  main.cpp  player.cpp  player.h  playerctrl.cpp  playerctrl.h  servertypes.h  voidai.h
tags/release-0.1.3/: Doxyfile  kbang_client.pro  kbang_server.pro
trunk/: kbang.kdevelop  kbang.pro  kbang_client.pro  kbang_common.pro
trunk/client/: chatwidget.cpp  chatwidget.h  chatwidget.ui  client.pro  client.qrc  connecttoserverdialog.cpp  connecttoserverdialog.h  connecttoserverdialog.ui  creategamedialog.cpp  gamecontextchangeevent.cpp  gameeventqueue.h  gameloop.h  gameobjectclickhandler.cpp  joingamedialog.cpp  joingamedialog.h  joingamedialog.ui  joinserverdialog.ui  lifepointschangeevent.cpp  localplayerwidget.cpp  localplayerwidget.h  logwidget.cpp  logwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opponentwidget.h  playercharacterwidget.h  serverconnection.cpp  serverconnection.h  servertester.cpp
trunk/doc/: Makefile  network_protocol.xml  specification.xml
trunk/server/: abstractcard.h  abstractplayerctrl.cpp  abstractplayerctrl.h  cardbang.cpp  cardbeer.cpp  carddrawcards.cpp  cardduel.h  carddynamite.cpp  cardfactory.cpp  cardgeneralstore.h  cardhorse.cpp  cardjail.cpp  cardtaker.cpp  client.cpp  client.h  clientcontroller.cpp  clientcontroller.h  clientplayerctrl.cpp  clientplayerctrl.h  clientxmlparser.cpp  clientxmlparser.h  command.cpp  command.h  common.h  config.cpp  console.cpp  console.h  consolecommand.cpp  consolecommand.h  game.cpp  game.h  gamearbiter.h  gameexceptions.h  gameserver.cpp  gameserver.h  gamestarter.cpp  gamestarter.h  gamestate.cpp  gamestate.h  gametable.h  (+30 more)
trunk/uml/: kbang.xmi
trunk_old/: Doxyfile  kbang.conf  kbang.kdevelop  kbang.pro
trunk_old/client/: chatwidget.cpp  client.qrc  connecttoserverdialog.ui  gameloop.cpp  joingamedialog.ui  logwidget.ui  serverconnection.cpp
trunk_old/server/: abstractplayerctrl.cpp  abstractplayerctrl.h  charactercard.h  clientplayerctrl.cpp  config.h  game.h  gamearbiter.cpp  gameserver.cpp  gameserver.h  main.cpp  player.h  playeractions.cpp  playercontrollerrunner.h  (+4 more)
wiki/: CardSet_Architecture.wiki  FileStructure.wiki  Porady.wiki  Protocol_Events.wiki  Refactoring.wiki  Roadmap.wiki  Screenshots.wiki  Testing.wiki  Tutorial.wiki  UserManual.wiki
(+491 files in other folders)
